[package]
name = "odbrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.9" }
shapefile = { version = "0.3.0", features = ["geo-types"] }
geo-types = { version = "0.7.6" }
ciborium = { version = "0.2.0" } 
uuid = { version = "*" }
eframe = { version = "0.19.0" }