[package]
name = "odbrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7.2" }
shapefile = { version = "0.4.0", features = ["geo-types"] }
geo-types = { version = "0.7.8" }
ciborium = { version = "0.2.0" } 
uuid = { version = "*" }
eframe = { version = "0.21.2" }
rand = "*"
float_eq = "*"
chrono = { version = "0.4", features = ["serde"] } 
image = "0.24.4"
gtfs-structures = { version = "0.33.0" }
proj = { version = "0.27.0", features = ["geo-types", "pkg_config"], path = "../proj" }